# Atelier

./: .dockerignore  .editorconfig  .firebaserc  .gcloudignore  .gitattributes  .gitignore  .markdownlint.yaml  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .prettierignore  .reviewer-calibration-log.json  .reviewer-envelope.json  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  REJECTED.md  ROADMAP.md  SECURITY.md  STATUS.md  agent_card.json  claude-progress.txt  features.json  firebase.json  firestore.indexes.json  firestore.rules  gaps.md  init.sh  lighthouserc.json  package-lock.json  package.json  (+4 more)
atelier-core/: README.md  agent_card.json  pyproject.toml
atelier-core/agent_cards/: critic_accessibilitycritic.agent-card.json  critic_brandcoherencecritic.agent-card.json  critic_nielsenheuristiccritic.agent-card.json  critic_visualqacritic.agent-card.json  fixer.agent-card.json  intake_brief_parser.agent-card.json  judge_accessibility.agent-card.json  judge_brand.agent-card.json  judge_originality.agent-card.json  judge_relevance.agent-card.json  judge_visual_clarity.agent-card.json  planner.agent-card.json  specialist_iaflowdesigner.agent-card.json  specialist_interactiondesigner.agent-card.json  specialist_tokengenerator.agent-card.json  specialist_uidesigner.agent-card.json  specialist_uxresearcher.agent-card.json  specialist_wireframer.agent-card.json
atelier-core/agent_cards/registration/: README.md  critic_accessibilitycritic.registration.json  critic_brandcoherencecritic.registration.json  critic_nielsenheuristiccritic.registration.json  critic_visualqacritic.registration.json  fixer.registration.json  intake_brief_parser.registration.json  judge_accessibility.registration.json  judge_brand.registration.json  judge_originality.registration.json  judge_relevance.registration.json  judge_visual_clarity.registration.json  planner.registration.json  specialist_iaflowdesigner.registration.json  specialist_interactiondesigner.registration.json  specialist_tokengenerator.registration.json  specialist_uidesigner.registration.json  specialist_uxresearcher.registration.json  specialist_wireframer.registration.json
atelier-core/scripts/: generate_agent_registrations.py  generate_bench_data.py  rag_extraction.py
atelier-core/src/atelier/: __init__.py  agent_engine_deploy.py  cli.py
atelier-core/src/atelier/a2ui/: __init__.py  catalog.py  gate.py  surface.py
atelier-core/src/atelier/api/: __init__.py  a2a.py  app.py  dream.py  evaluate.py  generate.py  platform.py  replay.py
atelier-core/src/atelier/auth/: firebase.py
atelier-core/src/atelier/board/: __init__.py  board_emitter.py  lexorank.py
atelier-core/src/atelier/durability/: __init__.py  bigquery_ml_helper.py  design_system_persister.py  gcs_helper.py  governor.py  incident_memory.py  kms_helper.py  screenshot_helper.py  usage_counter.py
atelier-core/src/atelier/evaluation/: __init__.py  agent_evaluation.py  agent_simulation.py
atelier-core/src/atelier/gates/: __init__.py  axe_core.py  clarify.py  contrast.py  deterministic.py  runner.py  signoff.py
atelier-core/src/atelier/intake/: __init__.py  brief_parser.py  brief_spec.py  research_findings.py  source_resolver.py  standards_extractor.py  web_research.py
atelier-core/src/atelier/integrations/: __init__.py  github_mcp.py  mcp_resource_server.py  stitch_mcp.py
atelier-core/src/atelier/memory/: __init__.py  bigquery_backend.py  bigquery_session.py  key.py  protocol.py  scope.py  session_protocol.py
atelier-core/src/atelier/models/: __init__.py  acceptance.py  axis_weights.py  clarify_models.py  constitution_registry.py  data_contracts.py  design_system.py  enums.py  interaction.py  model_armor_callbacks.py  model_registry.py  reviewer_envelope.py  safety.py
atelier-core/standards/: README.md  cross-cutting.standards.json  ecommerce-checkout.standards.json  fintech-trust.standards.json  marketing-landing.standards.json  saas-dashboard.standards.json
atelier-core/tests/: __init__.py  conftest.py
atelier-core/tests/eval/: README.md  golden_set.json  test_agent_evaluator.py  test_config.json  test_webgen_50.py  webgen_50_task_ids.json
atelier-core/tests/fixtures/: trajectories_seed.jsonl
atelier-core/tests/integration/: test_critique_panel_pipeline.py  test_design_system_enforcement.py  test_evaluate_endpoint.py  test_otel_export.py  test_pipeline_n1.py  test_pipeline_n1_n2_n3a.py  test_production_readiness.py  test_real_runner_e2e.py  test_record_replay_determinism.py  test_specialist_pipeline.py  test_trajectory_recorder.py  test_vertex_memory_bank_scope.py  test_vertex_procedural_replay.py
atelier-core/tests/security/: test_ci_security_gate.py  test_scrubber.py
atelier-core/tests/unit/: __init__.py  conftest.py  test_a2a_auth.py  test_a2a_error_mapping.py  test_a2ui_gate.py  test_a2ui_surface.py  test_agent_cards.py  test_agent_engine_deploy.py  test_agent_registry.py  test_anti_bias.py  test_api.py  test_api_error_handlers.py  test_app_security.py  test_at097_judge_tokens.py  test_audit_remediation_2026_06_11.py  test_axe_core.py  test_axe_fail_closed.py  test_axis_weights.py  test_backend_factory.py  test_bigquery_backend.py  test_bigquery_ml_helper.py  test_board_emitter.py  test_brief_parser.py  test_brief_spec.py  test_candidate_normalization.py  test_clarify.py  test_consensus.py  test_constitution_registry.py  test_contrast.py  test_contrast_gradient_stops.py  test_convergence_fallback_score_2026_06_11.py  test_critique_panel.py  test_data_contracts.py  test_degradation_messages.py  test_design_system_persistence.py  test_dpo_builder.py  test_dpo_tuning_job.py  test_dreaming_module.py  test_dreaming_module_rr04_rr31.py  test_episodic_backend_factory.py  (+64 more)
atelier-eval/: README.md  pyproject.toml
atelier-eval/datasets/: calibration-seed-v0.jsonl  webgen_bench_test.jsonl
atelier-eval/src/atelier_eval/: __init__.py  runner.py  scoreboard.py
atelier-eval/tests/: test_screenspot.py  test_screenspot_and_runner.py
(+416 files in other folders)
