[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "atelier-core"
version = "0.1.0a0"
description = "Atelier engine — autonomous design agent for Google for Startups AI Agents Challenge 2026"
readme = "README.md"
authors = [{ name = "Daniel Manzela", email = "hello@atelier.dev" }]
license = { file = "../LICENSE" }
requires-python = ">=3.11,<3.13"
keywords = [
    "ai-agent",
    "autonomous-design",
    "ui-ux",
    "google-adk",
    "vertex-ai",
    "stitch-mcp",
    "a2ui",
    "design-system",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Phase 1 D3 will populate full dep list. Initial bootstrap deps below.
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "structlog>=24.4,<26",
    # §9.2 DPO migration target — replaces deprecated vertexai.preview.tuning
    "google-genai>=1.0,<2",
    # Property tests for §21 reward determinism
    "hypothesis>=6.100",
    # Typed NDArray embeddings for §18 RouteRequest + §20 MemoryEvent
    "numpy>=1.26",
    # MCP
    "mcp>=1.0",
    # API server (used in atelier.api.app + tests/unit/test_api.py)
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.20,<1",
    # Production deps — Phase 1 D3+ (now active):
    "google-adk>=1.0.0,<2",
    # "agent-dag-pipeline>=3.0.0,<4",
    "google-cloud-aiplatform>=1.71,<2",
    # "google-cloud-firestore>=2.18,<3",
    "google-cloud-bigquery>=3.25,<4",
    "google-cloud-secret-manager>=2.20,<3",
    # "opentelemetry-api>=1.27,<2",
    # "opentelemetry-sdk>=1.27,<2",
    # "opentelemetry-exporter-gcp-trace>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "types-PyYAML>=6.0,<7",
    "pre-commit>=3.7,<5",
    # Schema validation for routing manifest tests (transitive via google-adk)
    "jsonschema>=4.20,<5",
]

[project.scripts]
atelier = "atelier.cli:main"

[project.urls]
Homepage = "https://atelier.dev"
Documentation = "https://docs.atelier.dev"
Repository = "https://github.com/Manzela/atelier"
Issues = "https://github.com/Manzela/atelier/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]

[tool.hatch.version]
path = "src/atelier/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast unit tests (<30s total)",
    "integration: integration tests requiring docker compose (~5min)",
    "slow: tests that take more than 5 seconds",
    "external: tests that hit external services (Vertex AI, Stitch MCP)",
]
