[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "atelier-core"
dynamic = ["version"]
description = "Atelier engine — autonomous design agent for Google for Startups AI Agents Challenge 2026"
readme = "README.md"
authors = [{ name = "Daniel Manzela", email = "hello@atelier.dev" }]
license = { file = "../LICENSE" }
requires-python = ">=3.11,<3.13"
keywords = [
    "ai-agent",
    "autonomous-design",
    "ui-ux",
    "google-adk",
    "vertex-ai",
    "stitch-mcp",
    "a2ui",
    "design-system",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Phase 1 D3 will populate full dep list. Initial bootstrap deps below.
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "structlog>=24.4,<26",
    # §9.2 DPO migration target — replaces deprecated vertexai.preview.tuning
    "google-genai>=1.0,<2",
    # Property tests for §21 reward determinism
    "hypothesis>=6.100",
    # Typed NDArray embeddings for §18 RouteRequest + §20 MemoryEvent
    "numpy>=1.26",
    # MCP
    "mcp>=1.0",
    # API server (used in atelier.api.app + tests/unit/test_api.py)
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.20,<1",
    # Production deps — Phase 1 D3+ (now active):
    # Pinned exact per AT-002 / PRD §22 D5: single google-adk version across
    # venv + both locks + pyproject + Dockerfile. Stay on 1.34.1 (verified
    # working, 608 tests green); a 2.x major bump is a separate scoped migration.
    "google-adk==1.34.1",
    # "agent-dag-pipeline>=3.0.0,<4",
    "google-cloud-aiplatform>=1.71,<2",
    # "google-cloud-firestore>=2.18,<3",
    "google-cloud-bigquery>=3.25,<4",
    # Direct pin (was transitive via google-adk → google-cloud-aiplatform).
    # Used by atelier.optimize.generator_tuner for GCS-staged DPO JSONL upload
    # (storage.Client at line 208, bucket().blob() at line 282). Pinning
    # directly defends against silent transitive-graph changes (slopsquatting
    # mitigation per CLAUDE.md <lockfile_only_installs>). Lockfile already
    # pins 3.10.1 — no regeneration needed for this version.
    # Docs: https://cloud.google.com/python/docs/reference/storage/latest
    "google-cloud-storage>=3.10,<4",
    "google-cloud-secret-manager>=2.20,<3",
    # Authentication — Firebase Admin SDK for Google SSO + JWT verification.
    # Version 7.4.0 is the latest stable release (2026-04-09, Apache-2.0).
    # Used by atelier.auth.firebase for FastAPI middleware. Provides local
    # JWT verification (no round-trip after public key cache) — sub-1ms overhead.
    # Docs: https://firebase.google.com/docs/auth/admin/verify-id-tokens
    "firebase-admin>=7.4,<8",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-gcp-trace>=1.7,<2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "types-PyYAML>=6.0,<7",
    "pre-commit>=3.7,<5",
    # Schema validation for routing manifest tests (transitive via google-adk)
    "jsonschema>=4.20,<5",
]

[project.scripts]
atelier = "atelier.cli:main"

[project.urls]
Homepage = "https://atelier.autonomous-agent.dev"
Documentation = "https://atelier.autonomous-agent.dev/docs"
Repository = "https://github.com/Manzela/atelier"
Issues = "https://github.com/Manzela/atelier/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier"]

[tool.hatch.version]
path = "src/atelier/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast unit tests (<30s total)",
    "integration: integration tests requiring docker compose (~5min)",
    "slow: tests that take more than 5 seconds",
    "external: tests that hit external services (Vertex AI, Stitch MCP)",
]
