[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "atelier-eval"
version = "0.2.0a0"
description = "Atelier evaluation suite — benchmark adapters and public scoreboard"
readme = "README.md"
authors = [{ name = "Daniel Manzela", email = "Manzela@users.noreply.github.com" }]
license = { file = "../LICENSE" }
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "httpx>=0.27,<1",
    "numpy>=1.26",
    "pillow>=10.0",
    "scikit-image>=0.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "types-Pillow>=10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atelier_eval"]

# Playwright ships no type stubs; the competitive_audit module integrates it at
# the async boundary. Scope the unavoidable untyped-import diagnostics to that
# module rather than relaxing --strict for the whole package.
[[tool.mypy.overrides]]
module = ["playwright.*", "playwright.async_api"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["atelier_eval.competitive_audit.*"]
disable_error_code = ["no-any-unimported"]

# scikit-image ships no type stubs; treat it as untyped so strict callers do not
# trip no-untyped-call on its functions.
[[tool.mypy.overrides]]
module = ["skimage.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["atelier_eval.metrics.*"]
disable_error_code = ["no-untyped-call"]
